<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SearchActivity"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    android:paddingVertical="40dp"
    android:background="@drawable/background_border_brown">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="ジャンル"
                android:textSize="20sp"
                android:textColor="#000000"/>

            <Spinner
                android:id="@+id/spinner_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                style="@style/textNormalBlack"
                android:id="@+id/input_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/country_input"
                android:textSize="20sp"
                android:textColor="@color/grey"
                android:background="@drawable/background_grey_radius"
                android:paddingHorizontal="8dp"
                android:paddingVertical="5dp"
                android:layout_marginTop="10dp"/>

            <TextView
                style="@style/textNormalBlack"
                android:id="@+id/input_city1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/city_1_input"
                android:textSize="20sp"
                android:textColor="@color/grey"
                android:background="@drawable/background_grey_radius"
                android:paddingHorizontal="8dp"
                android:paddingVertical="5dp"
                android:layout_marginTop="10dp"/>

            <TextView
                style="@style/textNormalBlack"
                android:id="@+id/input_city2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/city_2_input"
                android:textSize="20sp"
                android:textColor="@color/grey"
                android:background="@drawable/background_grey_radius"
                android:paddingHorizontal="8dp"
                android:paddingVertical="5dp"
                android:layout_marginTop="10dp"/>

            <LinearLayout
                android:id="@+id/checkBox_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="30dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkBox_cd_mts"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="誰かに会える" />

                    <CheckBox
                        android:id="@+id/checkBox_cd_fsn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="おしゃれ" />

                    <CheckBox
                        android:id="@+id/checkBox_cd_fun"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="楽しい"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkBox_cd_bty"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="きれい" />

                    <CheckBox
                        android:id="@+id/checkBox_cd_chl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="静か" />

                    <CheckBox
                        android:id="@+id/checkBox_cd_aln"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="人がいない"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkBox_cd_fnt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="神秘的" />

                    <CheckBox
                        android:id="@+id/checkBox_cd_sea"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="海" />

                    <CheckBox
                        android:id="@+id/checkBox_cd_mnt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="山"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkBox_cd_grn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="緑が多い" />

                    <CheckBox
                        android:id="@+id/checkBox_cd_ntr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="自然" />

                    <CheckBox
                        android:id="@+id/checkBox_cd_rvr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="川"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkBox_cd_uep"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="秘境" />

                    <CheckBox
                        android:id="@+id/checkBox_cd_nst"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="駅近" />

                    <CheckBox
                        android:id="@+id/checkBox_cd_opn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="開放的"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkBox_cd_ext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="異国感" />

                    <CheckBox
                        android:id="@+id/checkBox_cd_ftr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="未来的" />

                    <CheckBox
                        android:id="@+id/checkBox_cd_wlt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="散歩"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkBox_cd_rlx"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="ゆっくりできる" />

                    <CheckBox
                        android:id="@+id/checkBox_cd_ktt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="暇つぶし" />

                    <CheckBox
                        android:id="@+id/checkBox_cd_lts"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="穴場"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkBox_cd_acs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="アクセスが良い" />

                    <CheckBox
                        android:id="@+id/checkBox_cd_hgh"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="高いところ" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            style="@style/textNormalWhite"
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_brown_radius"
            android:text="@string/back"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            style="@style/textNormalWhite"
            android:id="@+id/button_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_brown_radius"
            android:text="@string/search"/>

    </LinearLayout>

</LinearLayout>